--- a/DJTwitch.css
+++ b/DJTwitch.css
@@ -3,3 +3,14 @@ p {
 	color:white;
 	font-family:Futura
 }
+body {
+	background:black;
+}
+h2 {
+	color:white;
+	font-family:Futura;
+}
+h3 {
+	color:white;
+	font-family:Futura;
+}
