--- a/DJTwitch.css
+++ b/DJTwitch.css
@@ -7,7 +7,23 @@ p {
 }
 
 body {
-	background-color: black;
+	/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #000000 0%, #000000 20%, #AF30EF 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #000000 0%, #000000 20%, #AF30EF 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #000000 0%, #000000 20%, #AF30EF 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #000000), color-stop(0.2, #000000), color-stop(1, #AF30EF));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #000000 0%, #000000 20%, #AF30EF 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #000000 0%, #000000 20%, #AF30EF 100%);
 }
 
 h2 {
