--- a/DJTwitch.css
+++ b/DJTwitch.css
@@ -1,16 +1,52 @@
 @charset "UTF-8";
 p {
-	color:white;
-	font-family:Futura
+	color: white;
+	font-family: Futura; 
+	text-align: center;
+	/* You forgot semicolon so it wasnt reading css */
 }
+
 body {
-	background-color:black;
+/* IE10 Consumer Preview */ 
+background-image: -ms-linear-gradient(top, #000000 0%, #000000 40%, #AF30EF 100%);
+
+/* Mozilla Firefox */ 
+background-image: -moz-linear-gradient(top, #000000 0%, #000000 40%, #AF30EF 100%);
+
+/* Opera */ 
+background-image: -o-linear-gradient(top, #000000 0%, #000000 40%, #AF30EF 100%);
+
+/* Webkit (Safari/Chrome 10) */ 
+background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #000000), color-stop(0.4, #000000), color-stop(1, #AF30EF));
+
+/* Webkit (Chrome 11+) */ 
+background-image: -webkit-linear-gradient(top, #000000 0%, #000000 40%, #AF30EF 100%);
+
+/* W3C Markup, IE10 Release Preview */ 
+background-image: linear-gradient(to bottom, #000000 0%, #000000 40%, #AF30EF 100%);
 }
+
 h2 {
-	color:white;
-	font-family:Futura;
+    text-align: center;
+	color: white;
+	font-family: Futura;
 }
+
 h3 {
+	text-align: center;
+	color: white;
+	font-family: Futura;
+}
+
+img.logo{
+display: block;
+}
+
+img.hackbca {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+a {
 	color:white;
-	font-family:Futura;
 }
