--- a/DJTwitch.css
+++ b/DJTwitch.css
@@ -1,7 +1,13 @@
+@font-face
+{
+font-family: myFirstFont;
+src: url(sansation_light.woff);
+}
+
 @charset "UTF-8";
 p {
 	color: white;
-	font-family: Futura; 
+	font-family: myFirstFont; 
 	text-align: center;
 	/* You forgot semicolon so it wasnt reading css */
 }
@@ -29,15 +35,13 @@ background-image: linear-gradient(to bottom, #000000 0%, #000000 40%, #AF30EF 10
 h2 {
     text-align: center;
 	color: white;
-	font-family: Futura;
+	font-family: myFirstFont;
 }
 
 h3 {
 	text-align: center;
 	color: white;
-	font-family: Futura;
-<<<<<<< HEAD
-=======
+	font-family: myFirstFont;
 }
 
 img.logo{
@@ -48,15 +52,8 @@ img.hackbca {
 	display: block;
     margin-left: auto;
     margin-right: auto;
->>>>>>> FETCH_HEAD
 }
 
 img.logo {
 display: block;
-}
-
-img.hackbca {
-	display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
