--- a/DJTwitch.css
+++ b/DJTwitch.css
@@ -36,6 +36,12 @@ background-image: -webkit-linear-gradient(top, #000000 0%, #000000 40%, #AF30EF 
 background-image: linear-gradient(to bottom, #000000 0%, #000000 40%, #AF30EF 100%);
 }
 
+h1 {
+    text-align: center;
+	color: white;
+	font-family: myFirstFont;
+}
+
 h2 {
     text-align: center;
 	color: white;
@@ -56,8 +62,4 @@ img.hackbca {
 	display: block;
     margin-left: auto;
     margin-right: auto;
-}
-
-img.logo {
-display: block;
 }
