--- a/landing.css
+++ b/landing.css
@@ -4,7 +4,8 @@ body {
 }
 
 img.landing {
-	display: block;
-    margin-left: auto;
+	width : 300px;
+	height: auto;
+	margin-left: auto;
     margin-right: auto;
 }
